Fixed tile content line break
Review highlights content was breaking to a new line because it's width
was too big.

--- a/css/style.css
+++ b/css/style.css
@@ -228,7 +228,7 @@ section.highlights .pill-pane.active {
 
 section.highlights .pill-content {
 	float: left;
-	width: 540px;
+	width: 510px;
 }
 
 section.highlights .sentiment {
